Segmented primes finding